carousel : corrections version mobile

--- a/css/migreurop.css
+++ b/css/migreurop.css
@@ -3348,7 +3348,7 @@ blockquote {
   display: inline-block; }
   @media only screen and (max-width: 480px) {
     .logo {
-      width: 280px; } }
+      width: 300px; } }
 
 /*   =PAGE
 ------------------------------------------------------ */
@@ -3841,12 +3841,23 @@ ol.objets-selection, ol.block-list--media {
   font-size: 24px;
   font-size: 1.5rem;
   line-height: 1; }
+  @media only screen and (max-width: 480px) {
+    .entry-title {
+      font-size: 20px;
+      font-size: 1.25rem;
+      line-height: 1.2; } }
 
 .soustitre {
   font-size: 20px;
   font-size: 1.25rem;
   line-height: 1.2;
-  font-family: "PT Sans Narrow", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font-family: "PT Sans Narrow", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #999; }
+  @media only screen and (max-width: 480px) {
+    .soustitre {
+      font-size: 16px;
+      font-size: 1rem;
+      line-height: 1.5; } }
 
 .meta-publi {
   border-top: 1px dotted #cccccc;
@@ -4041,7 +4052,7 @@ ol.objets-selection, ol.block-list--media {
   .flex-direction-nav a {
     height: 32px;
     width: 32px;
-    top: 15%; }
+    top: 20%; }
 
   .flex-prev {
     background-position: -96px -16px; }
@@ -4077,7 +4088,13 @@ ol.objets-selection, ol.block-list--media {
   min-height: 500px; }
   @media only screen and (max-width: 480px) {
     .carousel-ouverture {
-      min-height: inherit; } }
+      min-height: inherit;
+      border: 3px solid white;
+      -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+      -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+      -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+      -o-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2); } }
   .carousel-ouverture .wrap {
     position: absolute;
     left: 0;
@@ -4091,10 +4108,20 @@ ol.objets-selection, ol.block-list--media {
         width: auto;
         padding-right: 40%;
         background-color: rgba(29, 35, 38, 0.95);
+        -webkit-box-shadow: inset 0 0 3px black;
+        -moz-box-shadow: inset 0 0 3px black;
+        -ms-box-shadow: inset 0 0 3px black;
+        -o-box-shadow: inset 0 0 3px black;
         box-shadow: inset 0 0 3px black; } }
     @media only screen and (max-width: 480px) {
       .carousel-ouverture .wrap {
-        padding-right: 12px; } }
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        -ms-box-shadow: none;
+        -o-box-shadow: none;
+        box-shadow: none;
+        padding-right: 12px;
+        background-color: #fff; } }
   .carousel-ouverture header,
   .carousel-ouverture .soustitre,
   .carousel-ouverture .meta-publi {
@@ -4104,7 +4131,6 @@ ol.objets-selection, ol.block-list--media {
   .carousel-ouverture .entry-title {
     margin-bottom: 0; }
   .carousel-ouverture .soustitre {
-    color: #999;
     @inclure font-size(14px); }
   .carousel-ouverture a[rel="bookmark"],
   .carousel-ouverture .suite--link,
@@ -4122,9 +4148,23 @@ ol.objets-selection, ol.block-list--media {
     .carousel-ouverture .txt a:hover,
     .txt .carousel-ouverture a:hover {
       color: #d2270e; }
+    @media only screen and (max-width: 480px) {
+      .carousel-ouverture a[rel="bookmark"],
+      .carousel-ouverture .suite--link,
+      .carousel-ouverture .txt a,
+      .txt .carousel-ouverture a {
+        color: #000; }
+        .carousel-ouverture a[rel="bookmark"]:hover,
+        .carousel-ouverture .suite--link:hover,
+        .carousel-ouverture .txt a:hover,
+        .txt .carousel-ouverture a:hover {
+          color: #d2270e; } }
   .carousel-ouverture .entry-content p {
     margin-bottom: 12px;
     color: #fff; }
+    @media only screen and (max-width: 480px) {
+      .carousel-ouverture .entry-content p {
+        color: #666; } }
   .carousel-ouverture .meta-publi,
   .carousel-ouverture .meta-publi > li {
     border-color: #555;
