--- a/css/ui/carousel.scss
+++ b/css/ui/carousel.scss
@@ -77,7 +77,7 @@
    .flex-direction-nav a {
       height: 32px;
       width: 32px;
-      top: 15%;
+      top: 20%;
    }
    .flex-prev {
       background-position: -96px -16px;
@@ -127,6 +127,8 @@
       min-height: 500px;
       @include media-query(palm) {
          min-height: inherit;
+         border: 3px solid #fff;
+         @include vendor(box-shadow, 0 1px 3px rgba(0,0,0,0.2));
       }
       .wrap {
          position: absolute;
@@ -140,10 +142,12 @@
             width: auto;
             padding-right: 40%;
             background-color: rgba($noir-bleu,0.95);
-            box-shadow: inset 0 0 3px #000000;
+            @include vendor(box-shadow, inset 0 0 3px #000);
          }
          @include media-query(palm) {
+            @include vendor(box-shadow,none);
             padding-right: $half-spacing-unit;
+            background-color: #fff;
          }
       }
       header,
@@ -158,7 +162,6 @@
          margin-bottom: 0;
       }
       .soustitre {
-         color: #999;
          @inclure font-size(14px);
       }
       a[rel="bookmark"],
@@ -169,10 +172,19 @@
          &:hover {
             color: $brand-color;
          }
+         @include media-query(palm) {
+            color: #000;
+            &:hover {
+               color: $brand-color;
+            }
+         }
       }
       .entry-content p {
          margin-bottom: $half-spacing-unit;
          color: #fff;
+         @include media-query(palm) {
+            color: #666;
+         }
       }
       .meta-publi {
          &,
