--- a/css/ui/page-head.scss
+++ b/css/ui/page-head.scss
@@ -17,6 +17,6 @@
    .logo {
       display: inline-block;
       @include media-query(palm) {
-         width: 280px;
+         width: 300px;
       }
    }
